--- a/app/css/galerie_animata.scss
+++ b/app/css/galerie_animata.scss
@@ -7,5 +7,5 @@ $indice:math.random(list.length($lista_transformari));
 @use '../css/galerie_animata_frag' with (
   $transformare_i: list.nth(list.nth($lista_transformari,$indice),1),
   $transformare_f: list.nth(list.nth($lista_transformari,$indice),2),
-  $setare-server: <%- nrImagini %>
+  //$setare-server: <%- nrImagini %>
 );
