--- a/views/fragmente/nav_bar.ejs
+++ b/views/fragmente/nav_bar.ejs
@@ -42,17 +42,17 @@
         </li>
         <li class="nav-menu">
             <div class="nav-item">
-                <a href="http://localhost:8080/be_investor">Be an investor</a>
+                <a href="be_investor">Be an investor</a>
             </div>
         </li>
         <li class="nav-menu">
             <div class="nav-item">
-                <a href="http://localhost:8080/produse">Produse</a>
+                <a href="produse">Produse</a>
             </div>
             <ul  class="nav-submenu">
                 <%for (let i of optiuni){%>
                     <li class="nav-item nav-item-submenu">
-                        <a href=<%=`http://localhost:8080/produse?tip=${i}`%>>
+                        <a href=<%=`/produse?tip=${i}`%>>
                         <%= i%>
 
                         </a>
