--- a/views/fragmente/nav_bar.ejs
+++ b/views/fragmente/nav_bar.ejs
@@ -59,6 +59,22 @@
                     </li>
                 <%}%>
             </ul>
+        </li> <li class="nav-menu">
+            <div class="nav-item">
+                <a href="login">Account</a>
+            </div>
+            <ul  class="nav-submenu">
+
+                    <li class="nav-item nav-item-submenu">
+                        <a href="login"> Login
+                        </a>
+                    </li>
+                    <li class="nav-item nav-item-submenu">
+                        <a href="inregistrare"> Register
+                        </a>
+                    </li>
+
+            </ul>
         </li>
     </ul>
 </nav>
